--- a/formations.html
+++ b/formations.html
@@ -69,7 +69,7 @@
                                 <span>Mars 2020</span>
                             </div>
                             <div class="content">
-                                <h3>Dispositif en Amont de la Qaulification</h3>
+                                <h3>Dispositif en Amont de la Qualification</h3>
                                 <p>Gréta du Jura, Champagnole (39)</p>                    
                             </div>
                         </li>
