--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <div class="info">
                         <h3>Présentation</h3>
                         <p>Actuellement en formation professionnelle BAC+2 développeuse web/web mobile, avec <a href="https://www.accesscodeschool.fr/" target="_blank">
-                            access code school</a>. J'aimerais obtenir ce diplôme afin de poursuivre ma formation en alternance, avec cette école afin d'obtenir un BAC+3. 
-                            Pour cela, il me faut valider une période de stage, conventionné, non rémunéré, allant du 12 octobre 2020 au 7 décembre 2020.  Titulaire du permis B 
+                            access code school</a>. J'aimerais obtenir ce diplôme afin de poursuivre ma formation en alternance, avec cette école afin d'obtenir un BAC+3 "concepteur
+			    développeur d'applications. Pour cela, il me faut valider une période de stage, conventionné, non rémunéré, allant du 12 octobre 2020 au 7 décembre 2020.  Titulaire du permis B 
                             et n'étant ni phobiques des déplacements, ni au télétravail, je suis prête à travailler avec une entreprise partout en France ou en Suisse.</p>
                     </div>
                     <div class="info">
