--- a/competences.html
+++ b/competences.html
@@ -24,8 +24,7 @@
             <div class="scroll_cv">
                 <p class="text_scroll">
                     <a href="CV.pdf" download="CV Jessica Da Silva Cunha">
-                        <button class="dl_cv" type="button"> Télécharger CV
-                        </button>
+                        <button class="dl_cv" type="button"> Télécharger CV</button>
                     </a></p>
             </div>
         </div>
