--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <h3>Valeur professionnelle</h3>
                             <ul class="persos">
                                 <li><img src="ok.png" width="25" height="25"> Stimulation intellectuel</li>
-                                <li><img src="ok.png" width="25" height="25"> L'amélioration contine</li>
+                                <li><img src="ok.png" width="25" height="25"> L'amélioration continue</li>
                                 <li><img src="ok.png" width="25" height="25"> Harmonie </li>
                             </ul>                        
                         </div>                        
