--- a/formations.html
+++ b/formations.html
@@ -50,7 +50,7 @@
                             <div class="content">
                                 <h3>MOOC certifiants <a href="https://openclassrooms.com/fr/dashboard/courses">OpenClassrooms</a></h3>
                                 <p>"Découvrez le fonctionnement<br>des algorithmes"</p><br>
-                                <p>"Apprenez à créer votre sit<br>web avec HTML5 et CSS3 "</p><br>
+                                <p>"Apprenez à créer votre site<br>web avec HTML5 et CSS3 "</p><br>
                                 <p>"Découvrez le monde<br>des Systèmes d’Informations"</p><br>                           
                                 <p>"Créer des visuels avec Illustrator"</p>           
                             </div>
