--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                                                                 <div class="valign-cell">
                                                                     <h3 class="pf-title text-upper">Projet gardien</h3>
                                                                     <div class="pf-text clear-mrg">
-                                                                        <p>Suivi des changement d'ampoules</p>
+                                                                        <p>Suivi des changements d'ampoules</p>
                                                                     </div>
                                                                     <main class="js-document">
                                                                         <button class="detail" type="button" aria-haspopup="c-dialog" aria-controls="c-dialog">Plus de détail</button>
@@ -102,7 +102,7 @@
                         <button class="fermer" type="button" aria-label="Fermer" title="Fermer" data-dismiss="dialog">X</button>
                         <h2 class="dialog-title">Projet Gardien</h2>
                         <p class="dialog-desc">Nous avons imaginer un gardien d'immeuble ayant besoin d'un dashboard,
-                            pour suivre les chnagment d'ampoule dans l'immeuble. En notant, date, marque, puissance, lieux,
+                            pour suivre les changements d'ampoules dans l'immeuble. En notant, date, marque, puissance, lieux,
                             et l'étage.
                         </p>
                         <a class="projetc" href="https://jessicad.promo-39.codeur.online/gardien/" target="blank">Lien du projet complet</a>
