--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <h3>Soft skill</h3>
                             <ul class="perso">
                                 <li><img src="ok.png" width="25" height="25"> Sens de l'organisation</li>
-                                <li><img src="ok.png" width="25" height="25"> Autonme</li>
+                                <li><img src="ok.png" width="25" height="25"> Autonome</li>
                                 <li><img src="ok.png" width="25" height="25"> Curieuse </li>
                         </ul>
                         </div>
