Dossier image et modifications des chemins

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>test portfolio</title>
     <link href="folio.css" rel="stylesheet">
 </head>
@@ -13,13 +13,13 @@
         <div class="scroll">
             <div class="scroll_color">
                 <div class="avatar">
-                    <img src="bellette.png" width="200" height="200" onmouseover="this.src='bellettec.png';" onmouseout="this.src='bellette.png'" alt="Avatar" />
+                    <img src="images/bellette.png" width="200" height="200" onmouseover="this.src='images/bellettec.png';" onmouseout="this.src='images/bellette.png'" alt="Avatar" />
                 </div>
                 <div class="nom">
                     <h1>Jessica <br> Da Silva Cunha </h1>
                     <p class="civil">Développeuse web/web mobile</p>
-                    <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
-                    <a href="https://github.com/JessicaDaSilvaC"><img src="github.png" alt="GitHub" width="30" height="25" class="civil"></a>
+                    <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
+                    <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
                 </div>
             </div>
             <div class="scroll_cv">
@@ -69,7 +69,7 @@
                                             <div class="pf-grid-item photography">
                                                 <a class="pf-project" href="#pf-popup-1">
                                                     <div class="pf-figure">
-                                                        <img src="fox.png" width="250" height="200" alt="">
+                                                        <img src="images/fox.png" width="250" height="200" alt="">
                                                     </div>
                                                     <div class="survole">
                                                         <div class="pf-caption text-center">
@@ -123,12 +123,12 @@
 <!--Barre de naviguation-->                
                 <div class="sidebar">
                     <ul>
-                        <li><a href="index.html"><img src="home.png" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
-                        <li><a href="competences.html"><img src="competence.png" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
-                        <li><a href="formations.html"><img src="formation.png" width="32" height="32" alt="Formations"/><span class="infobulle">Formations</span></a></li>
-                        <li><a href="experiences.html"><img src="experience.png" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
-                        <li class="en_cours"><a href="portfolio.html"><img src="portfolio.png" width="32" height="32" alt="Portfolio"/><span class="infobulle"  class="en_cours">Portfolio</span></a></li>
-                        <li><a href="contact.html"><img src="contact.png" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
+                        <li><a href="index.html"><img src="images/home.png" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
+                        <li><a href="competences.html"><img src="images/competence.png" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
+                        <li><a href="formations.html"><img src="images/formation.png" width="32" height="32" alt="Formations"/><span class="infobulle">Formations</span></a></li>
+                        <li><a href="experiences.html"><img src="images/experience.png" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
+                        <li class="en_cours"><a href="portfolio.html"><img src="images/portfolio.png" width="32" height="32" alt="Portfolio"/><span class="infobulle"  class="en_cours">Portfolio</span></a></li>
+                        <li><a href="contact.html"><img src="images/contact.png" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
                     </ul>
                     <div class="sidebar_end"></div>
                 </div>
