--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
         <link href="style.css" rel="stylesheet">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<title>Jessica Da Silva</title>
 	</head>
 	<body>	
@@ -11,13 +11,13 @@
             <div class="wrap_content">
                 <div class="etat_civil">
                     <div class="avatar">
-                        <p><img src="bellette.png" width="200" height="200" onmouseover="this.src='bellettec.png';" onmouseout="this.src='bellette.png'" alt="Avatar" /></p>
+                        <p><img src="images/bellette.png" width="200" height="200" onmouseover="this.src='bellettec.png';" onmouseout="this.src='bellette.png'" alt="Avatar" /></p>
                     </div>
                     <div>
                         <h1>Jessica Da Silva Cunha </h1>
                         <p class="civil">Développeuse web/web mobile</p>
-                        <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
-                        <a href="https://github.com/JessicaDaSilvaC"><img src="github.png" alt="GitHub" width="30" height="25" class="civil"></a>
+                        <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
+                        <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
                     </div>
                 </div>
                 <div class="about">
@@ -34,16 +34,16 @@
                         <div class="cont_info">
                             <div class="crt_info">
                                 <ul class="perso">
-                                <li><img src="datenaissance.png" width="25" height="25"> 12 août 1994</li>
-                                <li><img src="localisation.png" width="25" height="25"> Andelot-en-Montagne, jura (39)</li>
-                                <li><img src="mail.png" width="30" height="25"> <a href="mailto:dasilvacjessica@gmail.com"> M'envoyer un mail</a></li>
+                                <li><img src="images/datenaissance.png" width="25" height="25"> 12 août 1994</li>
+                                <li><img src="images/localisation.png" width="25" height="25"> Andelot-en-Montagne, jura (39)</li>
+                                <li><img src="images/mail.png" width="30" height="25"> <a href="mailto:dasilvacjessica@gmail.com"> M'envoyer un mail</a></li>
                                 </ul>
                             </div>
                             <div class="crt_infos">
                                 <ul class="persos">
-                                <li><img src="tel.png" width="25" height="25"> <a href="tel:0614228431"> M'appeler</a></li>
-                                <li><img src="ok.png" width="25" height="25"> Accepte le télétravail</li>
-                                <li><img src="ok.png" width="25" height="25"> Accepte que le stage soit un "essai" pour un contrat en alternance
+                                <li><img src="images/tel.png" width="25" height="25"> <a href="tel:0614228431"> M'appeler</a></li>
+                                <li><img src="images/ok.png" width="25" height="25"> Accepte le télétravail</li>
+                                <li><img src="images/ok.png" width="25" height="25"> Accepte que le stage soit un "essai" pour un contrat en alternance
                                 (si diplôme et candidature alternance validé)</li>
                             </ul>
                             </div>
@@ -53,17 +53,17 @@
                         <div class="skill">
                             <h3>Soft skill</h3>
                             <ul class="perso">
-                                <li><img src="ok.png" width="25" height="25"> Sens de l'organisation</li>
-                                <li><img src="ok.png" width="25" height="25"> Autonome</li>
-                                <li><img src="ok.png" width="25" height="25"> Curieuse </li>
+                                <li><img src="images/ok.png" width="25" height="25"> Sens de l'organisation</li>
+                                <li><img src="images/ok.png" width="25" height="25"> Autonome</li>
+                                <li><img src="images/ok.png" width="25" height="25"> Curieuse </li>
                         </ul>
                         </div>
                         <div class="valeur">
                             <h3>Valeur professionnelle</h3>
                             <ul class="persos">
-                                <li><img src="ok.png" width="25" height="25"> Stimulation intellectuel</li>
-                                <li><img src="ok.png" width="25" height="25"> L'amélioration continue</li>
-                                <li><img src="ok.png" width="25" height="25"> Harmonie </li>
+                                <li><img src="images/ok.png" width="25" height="25"> Stimulation intellectuel</li>
+                                <li><img src="images/ok.png" width="25" height="25"> L'amélioration continue</li>
+                                <li><img src="images/ok.png" width="25" height="25"> Harmonie </li>
                             </ul>                        
                         </div>                        
                     </div>
@@ -73,16 +73,16 @@
                             <div class="cont_loisir">
                                 <div class="crt_loisir">
                                     <ul class="perso">
-                                        <li><img src="cerveau.png" width="35" height="35"> Épistémophile</li>
-                                        <li><img src="livre.jpg" width="35" height="35"> Lecture</li>
-                                        <li><img src="plume.png" width="35" height="35"> Écriture </li>
+                                        <li><img src="images/cerveau.png" width="35" height="35"> Épistémophile</li>
+                                        <li><img src="images/livre.jpg" width="35" height="35"> Lecture</li>
+                                        <li><img src="images/plume.png" width="35" height="35"> Écriture </li>
                                 </ul>
                                 </div>
                                 <div class="crt">
                                     <ul class="perso">
-                                        <li><img src="film.png" width="35" height="35"> L'audio/visuel</li>
-                                        <li><img src="jeux.png" width="35" height="35"> Jeux de société/ Jeux vidéo</li>
-                                        <li><img src="creativite.png" width="35" height="35"> Création </li>
+                                        <li><img src="images/film.png" width="35" height="35"> L'audio/visuel</li>
+                                        <li><img src="images/jeux.png" width="35" height="35"> Jeux de société/ Jeux vidéo</li>
+                                        <li><img src="images/creativite.png" width="35" height="35"> Création </li>
                                     </ul>
                                 </div>                                
                             </div>  
@@ -92,12 +92,12 @@
             </div>
             <div class="sidebar">
                 <ul>
-                    <li class="en_cours"><a href="index.html"><img src="home.png" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
-                    <li><a href="competences.html"><img src="competence.png" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
-                    <li><a href="formations.html"><img src="formation.png" width="32" height="32" alt="Formations"/><span class="infobulle" >Formations</span></a></li>
-                    <li><a href="experiences.html"><img src="experience.png" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
-                    <li><a href="portfolio.html"><img src="portfolio.png" width="32" height="32" alt="Portfolio"/><span class="infobulle" >Portfolio</span></a></li>
-                    <li><a href="contact.html"><img src="contact.png" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
+                    <li class="en_cours"><a href="index.html"><img src="images/home.png" width="32" height="32" alt="Accueil"/><span class="infobulle" >Accueil</span></a></li>
+                    <li><a href="competences.html"><img src="images/competence.png" width="32" height="32" alt="Compétences"/><span class="infobulle" >Compétences</span></a></li>
+                    <li><a href="formations.html"><img src="images/formation.png" width="32" height="32" alt="Formations"/><span class="infobulle" >Formations</span></a></li>
+                    <li><a href="experiences.html"><img src="images/experience.png" width="32" height="32" alt="Expériences"/><span class="infobulle" >Expériences</span></a></li>
+                    <li><a href="portfolio.html"><img src="images/portfolio.png" width="32" height="32" alt="Portfolio"/><span class="infobulle" >Portfolio</span></a></li>
+                    <li><a href="contact.html"><img src="images/contact.png" width="32" height="32" alt="Contact"/><span class="infobulle" >Contact</span></a></li>
                 </ul>
                 <div class="sidebar_end"></div>
             </div>
