Modif chemin oublié

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="wrap_content">
                 <div class="etat_civil">
                     <div class="avatar">
-                        <p><img src="images/bellette.png" width="200" height="200" onmouseover="this.src='bellettec.png';" onmouseout="this.src='bellette.png'" alt="Avatar" /></p>
+                        <p><img src="images/bellette.png" width="200" height="200" onmouseover="this.src='images/bellettec.png';" onmouseout="this.src='images/bellette.png'" alt="Avatar" /></p>
                     </div>
                     <div>
                         <h1>Jessica Da Silva Cunha </h1>
