--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                                             <div class="pf-grid-item photography">
                                                 <a class="pf-project" href="#pf-popup-1">
                                                     <div class="pf-figure">
-                                                        <img src="gardien.png" width="250" height="200" alt="">
+                                                        <img src="images/gardien.png" width="250" height="200" alt="">
                                                     </div>
                                                     <div class="survole">
                                                         <div class="pf-caption text-center">
