Nouvelle page d'accueil terminé

--- a/index.html
+++ b/index.html
@@ -15,19 +15,17 @@
                     </div>
                     <div>
                         <h1>Jessica Da Silva Cunha </h1>
-                        <p class="civil">Développeuse web/web mobile</p>
+                        <p class="civil">Conceptrice développeuse d'applications</p>
                         <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
                         <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
+                        <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.png" alt="CV" width="30" height="25" class="civil"></a>
                     </div>
                 </div>
                 <div class="about">
                     <h2 class="me">About me</h2>
                     <div class="info">
                         <h3>Présentation</h3>
-                        <p>Actuellement en formation professionnelle BAC+2 développeuse web/web mobile, avec <a href="https://www.accesscodeschool.fr/" target="_blank">
-                            access code school</a>. J'aimerais obtenir ce diplôme afin de poursuivre ma formation en alternance, avec cette école afin d'obtenir un BAC+3 "concepteur
-			    développeur d'applications". Pour cela, il me faut valider une période de stage, conventionné, non rémunéré, allant du 12 octobre 2020 au 7 décembre 2020.  Titulaire du permis B 
-                            et n'étant ni phobiques des déplacements, ni au télétravail, je suis prête à travailler avec une entreprise partout en France ou en Suisse.</p>
+                        <p>Actuellement à la recherche d'une entreprise d'accueil en alternance afin de préparer un Bac+3 "Conceptrice développeuse d'applications" au CFA d'<a href="https://www.onlineformapro.com/" target="_blank">onlineformapro</a>. Titulaire du permis B et n'étant phobique ni des déplacements, ni du télétravail, je suis prête à envisager un poste partout en France ou en Suisse. Âgée de 26 ans je suis éligible à l'<a href="https://www.service-public.fr/professionnels-entreprises/vosdroits/F23556" target="_blank">aide exceptionnelle aux contrats en alternance</a>, je suis également reconnue travailleuse handicapée, sans aménagement de poste, ce qui permets de cumuler l'aide des alternants à celle de l'<a href="https://www.agefiph.fr/alternance">agefiph</a>.</p>
                     </div>
                     <div class="info">
                         <h3>Informations personnel</h3>
@@ -42,9 +40,8 @@
                             <div class="crt_infos">
                                 <ul class="persos">
                                 <li><img src="images/tel.png" width="25" height="25"> <a href="tel:0614228431"> M'appeler</a></li>
-                                <li><img src="images/ok.png" width="25" height="25"> Accepte le télétravail</li>
-                                <li><img src="images/ok.png" width="25" height="25"> Accepte que le stage soit un "essai" pour un contrat en alternance
-                                (si diplôme et candidature alternance validé)</li>
+                                <li><img src="images/ok.png" width="25" height="25"> Accepte télétravail et semi-télétravail</li>
+                                <li><img src="images/ok.png" width="25" height="25"> Éligible aux aides de l'état et de l'agefiph concernants les contrats en alternances</li>
                             </ul>
                             </div>
                         </div>                        
