Nouvelle ppas compétences terminé

--- a/formations.html
+++ b/formations.html
@@ -19,14 +19,8 @@
                     <p class="civil">Développeuse web/web mobile</p>
                     <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
                     <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
+                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.png" alt="CV" width="30" height="25" class="civil"></a>
                 </div>
-            </div>
-            <div class="scroll_cv">
-                <p class="text_scroll">
-                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha">
-                        <button class="dl_cv" type="button"> Télécharger CV
-                        </button>
-                    </a></p>
             </div>
         </div>
         <div class="container">
