Nouvelles pages Formation, Expérience et contact terminées

--- a/experiences.html
+++ b/experiences.html
@@ -19,14 +19,8 @@
                     <p class="civil">Développeuse web/web mobile</p>
                     <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
                     <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
+                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.png" alt="CV" width="30" height="25" class="civil"></a>
                 </div>
-            </div>
-            <div class="scroll_cv">
-                <p class="text_scroll">
-                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha">
-                        <button class="dl_cv" type="button"> Télécharger CV
-                        </button>
-                    </a></p>
             </div>
         </div>
         <div class="container">
@@ -34,6 +28,24 @@
                 <h2>Expériences</h2>
 	            <div class="timeline">
 		            <ul>
+                        <li>
+                            <div class='time'>
+                                <span>Alternance</span>
+                            </div>
+                            <div class="content">
+                                <h3>2021</h3>
+                                <p>1 an chez vous ?</p>
+                            </div>
+			            </li>
+                        <li>
+                            <div class='time'>
+                                <span>Codage</span>
+                            </div>
+                            <div class="content">
+                                <h3>2020</h3>
+                                <p>2 mois à Hélix construction (stage)</p>
+                            </div>
+			            </li>
 			            <li>
                             <div class='time'>
                                 <span>Recrutement</span>
@@ -54,8 +66,8 @@
                                 <p>2 mois à Bubendorff, (68)</p>
                                 <p>21 mois à la DGFiP, (39)</p>                         
                                 <p>6 mois à Pôle emploi, (39)</p>
-                                <p>10 mois bénévolement en association, (39)</p>
-                                <p>Divers missions intérim / stages, (25)(39)</p>         
+                                <p>10 mois bénévole en association, (39)</p>
+                                <p>Divers missions (25)(39)</p>         
                             </div>
                         </li>
                         <li>
