--- a/formations.html
+++ b/formations.html
@@ -28,9 +28,18 @@
                 <h2>Formations</h2>
 	            <div class="timeline">
 		            <ul>
-			            <li>
+                        <li>
                             <div class='time'>
                                 <span>En cours</span>
+                            </div>
+                            <div class="content">
+                                <h3>Bac +3 "Conceptrice développeuse<br>d'applications</h3>
+                                <p>Onlineformapro, Besançon (25)</p>
+                            </div>
+			            </li>
+			            <li>
+                            <div class='time'>
+                                <span>Janvier 2021</span>
                             </div>
                             <div class="content">
                                 <h3>Titre professionnel "Développeur Web"</h3>
