--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <title>test portfolio</title>
+    <title>Portfolio</title>
     <link href="folio.css" rel="stylesheet">
 </head>
 <body>
@@ -19,15 +19,9 @@
                     <h1>Jessica <br> Da Silva Cunha </h1>
                     <p class="civil">Développeuse web/web mobile</p>
                     <a href="https://www.linkedin.com/in/jessica-da-silva-cunha-715999180/"><img src="images/lk.png" alt="linkedin" width="30" height="25" class="civil"></a>
-                    <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>
+                    <a href="https://github.com/JessicaDaSilvaC"><img src="images/github.png" alt="GitHub" width="30" height="25" class="civil"></a>                   
+                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha"><img src="images/telecharger.png" alt="CV" width="30" height="25" class="civil"></a>
                 </div>
-            </div>
-            <div class="scroll_cv">
-                <p class="text_scroll">
-                    <a href="CV.pdf" download="CV Jessica Da Silva Cunha">
-                        <button class="dl_cv" type="button"> Télécharger CV
-                        </button>
-                    </a></p>
             </div>
         </div>
 <!--End - Block qui suit le scroll-->
