--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <p>Actuellement à la recherche d'une entreprise d'accueil en alternance au rythme de 3 semaines en entreprise, 1 semaine en centre de formation. Afin de préparer un Bac+3 "Conceptrice développeuse d'applications" au CFA d'<a href="https://www.onlineformapro.com/" target="_blank">onlineformapro</a>. Titulaire du permis B et n'étant phobique ni des déplacements, ni du télétravail, je suis prête à envisager un poste partout en France ou en Suisse. Âgée de 26 ans je suis éligible à l'<a href="https://www.service-public.fr/professionnels-entreprises/vosdroits/F23556" target="_blank">aide exceptionnelle aux contrats en alternance</a>, je suis également reconnue travailleuse handicapée, sans aménagement de poste, ce qui permets de cumuler l'aide des alternants à celle de l'<a href="https://www.agefiph.fr/alternance">agefiph</a>.</p>
                     </div>
                     <div class="info">
-                        <h3>Informations personnel</h3>
+                        <h3>Informations personnelles</h3>
                         <div class="cont_info">
                             <div class="crt_info">
                                 <ul class="perso">
