--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </ul>
                         </div>
                         <div class="valeur">
-                            <h3>Valeur professionnelle</h3>
+                            <h3>Valeurs professionnelles</h3>
                             <ul class="persos">
                                 <li><img src="images/ok.png" width="25" height="25"> Stimulation intellectuel</li>
                                 <li><img src="images/ok.png" width="25" height="25"> L'amélioration continue</li>
